--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,6 +39,9 @@ jobs:
         tags: |
           hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
           hkustswarm/oak_ffc_img:latest
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+        platform: linux/amd64
 
   build-ARM64:
 
@@ -53,8 +56,24 @@ jobs:
       name: Checkout
       uses: actions/checkout@v3
     -
-      shell: bash
-      run: |
-          docker build -t hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }} -t hkustswarm/oak_ffc_img:latest -f oak_ffc_4p_ros.dockerfile .
-          docker push hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
-          docker push hkustswarm/oak_ffc_img:latest
+      name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_ACCOUNT }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    -
+      name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        file: oak_ffc_4p_ros.dockerfile
+        push: true
+        tags: |
+          hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
+          hkustswarm/oak_ffc_img:latest
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+        platform: linux/arm64
