--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,39 +41,39 @@ jobs:
           hkustswarm/oak_ffc_img:latest
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
-        platform: linux/amd64,linux/arm64
+        platforms: linux/amd64
 
-  # build-ARM64:
+  build-ARM64:
 
-  #   runs-on: self-hosted
+    runs-on: self-hosted
 
-  #   steps:
-  #   -
-  #     name: Get current date
-  #     id: date
-  #     run: echo "::set-output name=today::$(date +'%Y-%m-%d_%H-%M')"
-  #   -
-  #     name: Checkout
-  #     uses: actions/checkout@v3
-  #   -
-  #     name: Login to Docker Hub
-  #     uses: docker/login-action@v2
-  #     with:
-  #       username: ${{ secrets.DOCKER_HUB_ACCOUNT }}
-  #       password: ${{ secrets.DOCKER_HUB_TOKEN }}
-  #   -
-  #     name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v2
-  #   -
-  #     name: Build and push
-  #     uses: docker/build-push-action@v3
-  #     with:
-  #       context: .
-  #       file: oak_ffc_4p_ros.dockerfile
-  #       push: true
-  #       tags: |
-  #         hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
-  #         hkustswarm/oak_ffc_img:latest
-  #       cache-from: type=local,src=/tmp/.buildx-cache
-  #       cache-to: type=local,dest=/tmp/.buildx-cache
-  #       platform: linux/arm64
+    steps:
+    -
+      name: Get current date
+      id: date
+      run: echo "::set-output name=today::$(date +'%Y-%m-%d_%H-%M')"
+    -
+      name: Checkout
+      uses: actions/checkout@v3
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_ACCOUNT }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    -
+      name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        file: oak_ffc_4p_ros.dockerfile
+        push: true
+        tags: |
+          hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
+          hkustswarm/oak_ffc_img:latest
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+        platforms: linux/arm64
