--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_ACCOUNT }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -39,41 +41,6 @@ jobs:
         tags: |
           hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
           hkustswarm/oak_ffc_img:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
-        platforms: linux/amd64
-
-  build-ARM64:
-
-    runs-on: self-hosted
-
-    steps:
-    -
-      name: Get current date
-      id: date
-      run: echo "::set-output name=today::$(date +'%Y-%m-%d_%H-%M')"
-    -
-      name: Checkout
-      uses: actions/checkout@v3
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_ACCOUNT }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    -
-      name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        file: oak_ffc_4p_ros.dockerfile
-        push: true
-        tags: |
-          hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
-          hkustswarm/oak_ffc_img:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
-        platforms: linux/arm64
+        cache-from: type=gha
+        cache-to: type=gha
+        platforms: linux/amd64,linux/arm64
