--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     -
@@ -41,6 +41,6 @@ jobs:
         tags: |
           hkustswarm/oak_ffc_img:${{ steps.date.outputs.today }}
           hkustswarm/oak_ffc_img:latest
-        cache-from: type=gha
-        cache-to: type=gha
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
         platforms: linux/amd64,linux/arm64
